--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,151 @@
-.green-btn{
-    background: #4CAF4F;
-    color: #FFF;
+*{
+    font-family: "Inter", sans-serif;
+    /* font-weight: bold; */
+}
+.green-bnt{
+    background: #4caf4f;
+    color: #fff;
     font-weight: 400;
 }
-.green-btn:hover,.green-btn:focus{
-    background: #38853b;
-    color: #FFF;
+
+.green-bnt:hover , .green-bnt:focus{
+    background: #4caf4f;
+    color: #fff;
 }
 
-.btn-btn-lg-green-btn{
-    color: #4CAF4F;
+h5{
+    color: #4caf4f;
+    font-weight: bold;
 }
 
-.primary-color{
-    color: #4CAF4F;
+h5 a{
     text-decoration: none;
+    color: #4caf4f;
+}
+
+h6 a{
+    text-decoration: none;
+    color: #4caf4f;
+    font-weight: bold;
 }
 
 .text-translate{
-    transform: translateY(-70%);
-    background: #FFF;
-    margin: 50px;
+    transform: translateY(-110%);
+    background: #ffffff ;
+    margin: 40px;
     border-radius: 10px;
-    margin-top: auto;
+}
+
+.text-translate p{
+    margin: 20px;
+    /* width: ; */
+    height: 60px;
+}
+
+.text-translate a{
+    margin: 10px;
+}
+
+footer{
+    background: #263238;
+    /* height: 200px; */
+    /* margin: 30px 0; */
+}
+
+ul{
+    list-style: none;
+    padding-left: 0;
+}
+
+.final a{
+    text-decoration: none;
+    color: #fff;
+}
+
+.social-midia{
+    margin: 30px 0;
+    
+}
+
+.social-midia a{
+    margin: 5px;
+}
+
+.logo{
+    margin: 40px 0 30px;
+}
+
+input{
+    border-radius: 7px;
+    background: #717171;
+    /* color: black; */
+    border: none;
+}
+
+form{
+    display: flex;
+    transform: translateX(-10);    
+}
+
+button{
+   border: 0;
+   background: transparent;
+  
+}
+
+h6{
+    color: #fff;
+    margin: 40px 0 10px;
+    font-weight: bold;
+}
+
+.final p{
+    color: #fff;
+}
+
+/* .placeholder{
+    color: #fff;
+} */
+
+.translate-button{
+    transform: translateX(-32px);
+}
+
+::placeholder{
+    color: #c2c2c2;
+    padding: 4px;
+}
+
+/* .Pellentesque h3{
+    width: 50px 0 0;
+} */
+ .Pellentesque{
+    margin-top: -110px;
+ }
+
+.helping h4 span{
+    color: #4caf4f;
+}
+
+h4{
+    font-weight: bold;
+}
+ h2{
+    font-weight: bold;
+ }
+
+ h1{
+    font-weight: bold;
+ }
+
+  h5{
+    font-weight: bold;
+}
+
+h3{
+    font-weight: bold;
+}
+
+.Pellentesque h3{
+    font-size: 60px;
 }
